updating splash page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 ---
-layout: home
-author_profile: true
+layout: spalsh
+author_profile: false
+permalink: /
+header:
+  overlay_color: "#000"
+  actions:
+    - label: "Get Started"
+      url: "https://bonvision.github.io/pages/info/"
+	  
+excerpt: >
+  An open-source software package to create and control visual environments.<br />
+feature_row:
+  - image_path: assets/Images/DemoGIFs/MonkHead.gif
+    alt: "placeholder image 1"
+    title: "3D Object animation"
+    excerpt: "W.I.P"
+  - image_path: assets/Images/DemoGIFs/BlackLoom.gif
+    alt: "placeholder image 1"
+    title: "Loom animation"
+    excerpt: "W.I.P"
+  - image_path: assets/Images/DemoGIFs/SparseNoise.gif
+    alt: "placeholder image 1"
+    title: "SparseNoise"
+    excerpt: "W.I.P"
 ---
+
+{% include feature_row %}
