--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-classes:
+classes: wide
   - landing
   - dark-theme
 author_profile: false
@@ -10,7 +10,6 @@ header:
   actions:
     - label: "Get Started"
       url: "https://bonvision.github.io/pages/info/"
-	  
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
