--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ classes: wide
 author_profile: false
 permalink: /
 header:
-  overlay_color: "#D3D3D3"
+  overlay_color: "#000"
   actions:
     - label: "Get Started"
       url: "https://bonvision.github.io/pages/info/"
