--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@ feature_row:
     alt: "placeholder image 1"
     title: "3D Object animation"
     excerpt: "W.I.P"
-  - image_path: assets/Images/DemoGIFs/BlackLoom.gif
+  - image_path: assets/Images/DemoGIFs/MonkeyGrating.gif
     alt: "placeholder image 1"
-    title: "Loom animation"
+    title: "3D Object animation 2"
     excerpt: "W.I.P"
+feature_row2:
   - image_path: assets/Images/DemoGIFs/SparseNoise.gif
     alt: "placeholder image 1"
     title: "SparseNoise"
     excerpt: "W.I.P"
+  - image_path: assets/Images/DemoGIFs/BlackLoom.gif
+    alt: "placeholder image 1"
+    title: "Loom animation"
+    excerpt: "W.I.P"
 ---
 
 {% include feature_row %}
+{% include feature_row id="feature_row2" type="left" % %}
+# feature_row3:
+# {% include feature_row id="feature_row3" type="right" % %}
