--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ feature_row2:
     alt: "placeholder image 1"
     title: "SparseNoise"
     excerpt: "W.I.P"
+feature_row3:
   - image_path: assets/Images/DemoGIFs/BlackLoom.gif
     alt: "placeholder image 1"
     title: "Loom animation"
@@ -33,4 +34,7 @@ feature_row2:
 ---
 
 {% include feature_row %}
+
 {% include feature_row id="feature_row2" type="left" % %}
+
+{% include feature_row id="feature_row3" type="right" % %}
