--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ feature_row3:
 
 {% include feature_row %}
 
-{% include feature_row id="feature_row2" type="left" % %}
+{% include feature_row id="feature_row2" type="left" %}
 
-{% include feature_row id="feature_row3" type="right" % %}
+{% include feature_row id="feature_row3" type="right" %}
