--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ header:
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
-  - image_path: assets/Images/DemoGIFs/MonkHead.gif
+  - image_path: assets/Images/DemoGIFs/MonkeyGrating.gif
     alt: "placeholder image 1"
-    title: "3D Object animation"
-    excerpt: "W.I.P"
-  #- image_path: assets/Images/DemoGIFs/MonkeyGrating.gif
+    title: "2D surface and 3D Object animation"
+    excerpt: "An example where we render a 3D object and a dynamic 2D stimulus simultaneously"
+  #- image_path: assets/Images/DemoGIFs/MonkHead.gif
   #  alt: "placeholder image 1"
   #  title: "3D Object animation 2"
   #  excerpt: "..."
@@ -31,11 +31,18 @@ feature_row3:
     alt: "placeholder image 1"
     title: "Loom animation"
     excerpt: "..."
+feature_row4:
+  - image_path: assets/Images/DemoGIFs/basic.gif
+    alt: "placeholder image 1"
+    title: "Building a workflow"
+    excerpt: "Creating a stimulus is as simple as shown in this animation, where stimuli can be designed by using various nodes in the program. The details of how to build stimuli are described in the section 'Getting Started'."
 ---
 
-{% include feature_row id="feature_row2" type="left" %}
+#{% include feature_row id="feature_row2" type="left" %}
 
-{% include feature_row id="feature_row3" type="right" %}
+#{% include feature_row id="feature_row3" type="right" %}
 
 {% include feature_row  type="left" %}
+
+{% include feature_row  id="feature_row4" type="left" %}
 
