--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@ feature_row4:
     excerpt: "Creating a stimulus is as simple as shown in this animation, where stimuli can be designed by using various nodes in the program. The details of how to build stimuli are described in the section 'Getting Started'."
 ---
 
-#{% include feature_row id="feature_row2" type="left" %}
-
-#{% include feature_row id="feature_row3" type="right" %}
-
 {% include feature_row  type="left" %}
 
-{% include feature_row  id="feature_row4" type="left" %}
+{% include feature_row  id="feature_row4" %}
 
