--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@ feature_row4:
 
 {% include feature_row  type="left" %}
 
-{% include feature_row  id="feature_row4" %}
+{% include feature_row  id="feature_row4" type="right" %}
 
