--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@ header:
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
-  - image_path: assets/Images/DemoGIFs/MonkeyGrating.gif
+  - image_path: assets/Images/Demos/DemoAR.mp4
     alt: "placeholder image 1"
-    title: "2D surface and 3D Object animation"
+    title: "Augmented Reality - subject interaction"
     excerpt: "An example where we render a 3D object and a dynamic 2D stimulus simultaneously"
 feature_row2:
-  - image_path: assets/Images/DemoGIFs/SparseNoise.gif
+  - image_path: assets/Images/Demos/VR.avi
     alt: "placeholder image 1"
-    title: "SparseNoise"
-    excerpt: "..."
+    title: "Virtual Reality Corridor"
+    excerpt: ""
 feature_row3:
-  - image_path: assets/Images/DemoGIFs/BlackLoom.gif
+  - image_path: assets/Images/Demos/2AFC.avi
     alt: "placeholder image 1"
-    title: "Loom animation"
-    excerpt: "..."
+    title: "Human psychophysics - 2AFC"
+    excerpt: ""
 feature_row4:
   - image_path: assets/Images/DemoGIFs/basic.gif
     alt: "placeholder image 1"
@@ -35,6 +35,10 @@ feature_row4:
 ---
 
 {% include feature_row  type="left" %}
+
+{% include feature_row  id="feature_row2" type="right" %}
+
+{% include feature_row  id="feature_row3" type="right" %}
 
 {% include feature_row  id="feature_row4" type="right" %}
 
