--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@ feature_row4:
     alt: "placeholder image 1"
     title: "Building a workflow"
     excerpt: "Creating a stimulus is as simple as shown in this animation, where stimuli can be designed by using various nodes in the program. The details of how to build stimuli are described in the section 'Getting Started'."
+feature_row5:
+  - video:
+      id: 3XexKrRg_9M
+	  provider: youtube
+    alt: "placeholder image 1"
+    title: "Augmented Reality - subject interaction"
 ---
 
 {% include feature_row  type="left" %}
 
-{% include feature_row  id="feature_row2" type="right" %}
+{% include feature_row  id="feature_row5" type="right" %}
 
 {% include feature_row  id="feature_row3" type="right" %}
 
