--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ feature_row4:
 
 {% include feature_row  type="left" %}
 
-{% include video id="3XexKrRg_9M" provider="youtube" %}
+#{% include video id="3XexKrRg_9M" provider="youtube" %}
 
 {% include feature_row  id="feature_row2" type="right" %}
 
