--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@ header:
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
-  - image_path: assets/Images/Demos/DemoAR.gif
-    alt: "placeholder image 1"
+  - image_path: assets/Images/Demos/DemoAR_v3.gif
+    alt: "Augmented Reality - subject interaction"
     title: "Augmented Reality - subject interaction"
     excerpt: "An example where we render a 3D object and a dynamic 2D stimulus simultaneously"
 feature_row2:
-  - image_path: assets/Images/Demos/VR.gif
-    alt: "placeholder image 1"
+  - image_path: assets/Images/Demos/DemoVR_v2.gif
+    alt: "Virtual Reality Corridor"
     title: "Virtual Reality Corridor"
     excerpt: ""
 feature_row3:
   - image_path: assets/Images/Demos/2AFC.gif
-    alt: "placeholder image 1"
+    alt: "2AFC"
     title: "Human psychophysics - 2AFC"
     excerpt: ""
 feature_row4:
