--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
   overlay_color: "#696969"
   actions:
     - label: "Get Started"
-      url: "https://bonvision.github.io/pages/info/"
+      url: "https://bonvision.github.io/pages/001_info/"
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
