--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ permalink: /
 header:
   overlay_color: "#696969"
   actions:
+    - label: "Pre-print"
+      url: "https://www.biorxiv.org/content/10.1101/2020.03.09.983775v1"
     - label: "Get Started"
       url: "https://bonvision.github.io/pages/001_info/"
 excerpt: >
