--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ header:
       url: "https://www.biorxiv.org/content/10.1101/2020.03.09.983775v1"
     - label: "Get Started"
       url: "https://bonvision.github.io/pages/001_info/"
+    - label: "YouTube Channel"
+      url: "https://youtube.com/playlist?list=PLBKHg50VqjRJpWxnWg2pdlTD1JiMlbVCY"
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
