--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ header:
     - label: "Get Started"
       url: "https://bonvision.github.io/pages/001_info/"
     - label: "YouTube Channel"
-      url: "https://youtube.com/playlist?list=PLBKHg50VqjRJpWxnWg2pdlTD1JiMlbVCY"
+      url: "https://www.youtube.com/channel/UCEg-3mfbvjIwbzDVvqYudAA"
+    - label: "Newsletter"
+      url: "https://groups.google.com/u/1/g/bonvision-news"
 excerpt: >
   An open-source software package to create and control visual environments.<br />
 feature_row:
